Atualização do clone do site de Sign Up

--- a/aula-css/index.html
+++ b/aula-css/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula CSS</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -23,10 +24,10 @@
             </div>
             <div id="esquerda-quatro">
                 <label>or use your account</label>
-                <input type="email" placeholder="E-mail">
-                <input type="password" placeholder="Password">
+                <input type="email" placeholder="E-mail" id="input-email">
+                <input type="password" placeholder="Password" id="input-senha">
                 <label>Forgot your password?</label>
-                <button>Sign In</button>
+                <button id="botao-esquerdo">SIGN IN</button>
             </div>
             <div id="esquerda-cinco">
 
